--- a/Front-end/pages/cart.html
+++ b/Front-end/pages/cart.html
@@ -71,7 +71,11 @@
                     <span>Total</span>
                     <span>$209.99</span>
                 </div>
-                <button class="checkout-btn">Proceed to Checkout</button>
+                <div>
+                    <a href="checkout.html">
+                        <button class="checkout-btn">Proceed to Checkout</button>
+                    </a>
+                </div> 
             </div>
         </div>
     </main>
