--- a/Front-end/pages/checkout.html
+++ b/Front-end/pages/checkout.html
@@ -54,7 +54,15 @@
 
         <div class="checkout-total">
             <h3>Total: $<span id="total-price">0.00</span></h3>
-        </div>
+            <div class="summary-item">
+                <span>Subtotal</span>
+                <span id="subtotal-price">₱0.00</span>
+            </div>
+            <div class="summary-item">
+                <span>Shipping</span>
+                <span id="shipping-price">₱0.00</span>
+            </div>
+        </div>        
     </div>
 
     <script src="../js/checkout.js"></script>
