--- a/Front-end/pages/product-details.html
+++ b/Front-end/pages/product-details.html
@@ -11,28 +11,22 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="navbar">
-            <div class="logo">
-                <a href="../index.html">Sole Haven</a>
-            </div>
-            <div class="nav-center">
+        <nav class="navbar">
+            <a href="../index.html" class="logo">Sole Haven</a>
+            <div class="nav-links">
                 <a href="new-arrival.html">New & Featured</a>
                 <a href="collection.html">Collection</a>
                 <a href="Mens.html">Men</a>
                 <a href="women.html">Women</a>
                 <a href="kids.html">Kids</a>
             </div>
-            <div class="nav-right">
-                <div class="search-box">
-                    <input type="text" placeholder="Search...">
-                </div>
-                <div class="nav-icons">
-                    <a href="favorites.html"><i class="fas fa-heart"></i></a>
-                    <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
-                    <a href="account.html"><i class="fas fa-user"></i></a>
-                </div>
+            <div class="nav-icons">
+                <input type="text" placeholder="Search...">
+                <a href="favorites.html"><i class="fas fa-heart"></i></a>
+                <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                <a href="login.html"><i class="fas fa-user"></i></a>
             </div>
-        </div>
+        </nav>
     </header>
     
     <div class="product-container">
@@ -106,7 +100,6 @@
         </div>
     </div>
 
-    <!-- Before closing </body> tag, add these scripts in this order: -->
     <script src="../js/products-data.js"></script>
     <script src="../js/storage-utils.js"></script>
     <script src="../js/product-details.js"></script>
